; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/extr_hci_event.c_hci_encrypt_change_evt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/extr_hci_event.c_hci_encrypt_change_evt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_dev = type { i32 }
%struct.sk_buff = type { i64 }
%struct.hci_ev_encrypt_change = type { i64, i32, i32 }
%struct.hci_conn = type { i64, i32, i32 }

@.str = private unnamed_addr constant [13 x i8] c"%s status %d\00", align 1
@HCI_LM_AUTH = common dso_local global i32 0, align 4
@HCI_LM_ENCRYPT = common dso_local global i32 0, align 4
@HCI_CONN_ENCRYPT_PEND = common dso_local global i32 0, align 4
@BT_CONFIG = common dso_local global i64 0, align 8
@BT_CONNECTED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hci_dev*, %struct.sk_buff*)* @hci_encrypt_change_evt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hci_encrypt_change_evt(%struct.hci_dev* %0, %struct.sk_buff* %1) #0 {
  %3 = alloca %struct.hci_dev*, align 8
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.hci_ev_encrypt_change*, align 8
  %6 = alloca %struct.hci_conn*, align 8
  store %struct.hci_dev* %0, %struct.hci_dev** %3, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %4, align 8
  %7 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %8 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to i8*
  %11 = bitcast i8* %10 to %struct.hci_ev_encrypt_change*
  store %struct.hci_ev_encrypt_change* %11, %struct.hci_ev_encrypt_change** %5, align 8
  %12 = load %struct.hci_dev*, %struct.hci_dev** %3, align 8
  %13 = getelementptr inbounds %struct.hci_dev, %struct.hci_dev* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.hci_ev_encrypt_change*, %struct.hci_ev_encrypt_change** %5, align 8
  %16 = getelementptr inbounds %struct.hci_ev_encrypt_change, %struct.hci_ev_encrypt_change* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @BT_DBG(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %17)
  %19 = load %struct.hci_dev*, %struct.hci_dev** %3, align 8
  %20 = call i32 @hci_dev_lock(%struct.hci_dev* %19)
  %21 = load %struct.hci_dev*, %struct.hci_dev** %3, align 8
  %22 = load %struct.hci_ev_encrypt_change*, %struct.hci_ev_encrypt_change** %5, align 8
  %23 = getelementptr inbounds %struct.hci_ev_encrypt_change, %struct.hci_ev_encrypt_change* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @__le16_to_cpu(i32 %24)
  %26 = call %struct.hci_conn* @hci_conn_hash_lookup_handle(%struct.hci_dev* %21, i32 %25)
  store %struct.hci_conn* %26, %struct.hci_conn** %6, align 8
  %27 = load %struct.hci_conn*, %struct.hci_conn** %6, align 8
  %28 = icmp ne %struct.hci_conn* %27, null
  br i1 %28, label %29, label %95

29:                                               ; preds = %2
  %30 = load %struct.hci_ev_encrypt_change*, %struct.hci_ev_encrypt_change** %5, align 8
  %31 = getelementptr inbounds %struct.hci_ev_encrypt_change, %struct.hci_ev_encrypt_change* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %58, label %34

34:                                               ; preds = %29
  %35 = load %struct.hci_ev_encrypt_change*, %struct.hci_ev_encrypt_change** %5, align 8
  %36 = getelementptr inbounds %struct.hci_ev_encrypt_change, %struct.hci_ev_encrypt_change* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %50

39:                                               ; preds = %34
  %40 = load i32, i32* @HCI_LM_AUTH, align 4
  %41 = load %struct.hci_conn*, %struct.hci_conn** %6, align 8
  %42 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 4
  %44 = or i32 %43, %40
  store i32 %44, i32* %42, align 4
  %45 = load i32, i32* @HCI_LM_ENCRYPT, align 4
  %46 = load %struct.hci_conn*, %struct.hci_conn** %6, align 8
  %47 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %46, i32 0, i32 2
  %48 = load i32, i32* %47, align 4
  %49 = or i32 %48, %45
  store i32 %49, i32* %47, align 4
  br label %57

50:                                               ; preds = %34
  %51 = load i32, i32* @HCI_LM_ENCRYPT, align 4
  %52 = xor i32 %51, -1
  %53 = load %struct.hci_conn*, %struct.hci_conn** %6, align 8
  %54 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %53, i32 0, i32 2
  %55 = load i32, i32* %54, align 4
  %56 = and i32 %55, %52
  store i32 %56, i32* %54, align 4
  br label %57

57:                                               ; preds = %50, %39
  br label %58

58:                                               ; preds = %57, %29
  %59 = load i32, i32* @HCI_CONN_ENCRYPT_PEND, align 4
  %60 = load %struct.hci_conn*, %struct.hci_conn** %6, align 8
  %61 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %60, i32 0, i32 1
  %62 = call i32 @clear_bit(i32 %59, i32* %61)
  %63 = load %struct.hci_conn*, %struct.hci_conn** %6, align 8
  %64 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %63, i32 0, i32 0
  %65 = load i64, i64* %64, align 8
  %66 = load i64, i64* @BT_CONFIG, align 8
  %67 = icmp eq i64 %65, %66
  br i1 %67, label %68, label %85

68:                                               ; preds = %58
  %69 = load %struct.hci_ev_encrypt_change*, %struct.hci_ev_encrypt_change** %5, align 8
  %70 = getelementptr inbounds %struct.hci_ev_encrypt_change, %struct.hci_ev_encrypt_change* %69, i32 0, i32 1
  %71 = load i32, i32* %70, align 8
  %72 = icmp ne i32 %71, 0
  br i1 %72, label %77, label %73

73:                                               ; preds = %68
  %74 = load i64, i64* @BT_CONNECTED, align 8
  %75 = load %struct.hci_conn*, %struct.hci_conn** %6, align 8
  %76 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %75, i32 0, i32 0
  store i64 %74, i64* %76, align 8
  br label %77

77:                                               ; preds = %73, %68
  %78 = load %struct.hci_conn*, %struct.hci_conn** %6, align 8
  %79 = load %struct.hci_ev_encrypt_change*, %struct.hci_ev_encrypt_change** %5, align 8
  %80 = getelementptr inbounds %struct.hci_ev_encrypt_change, %struct.hci_ev_encrypt_change* %79, i32 0, i32 1
  %81 = load i32, i32* %80, align 8
  %82 = call i32 @hci_proto_connect_cfm(%struct.hci_conn* %78, i32 %81)
  %83 = load %struct.hci_conn*, %struct.hci_conn** %6, align 8
  %84 = call i32 @hci_conn_put(%struct.hci_conn* %83)
  br label %94

85:                                               ; preds = %58
  %86 = load %struct.hci_conn*, %struct.hci_conn** %6, align 8
  %87 = load %struct.hci_ev_encrypt_change*, %struct.hci_ev_encrypt_change** %5, align 8
  %88 = getelementptr inbounds %struct.hci_ev_encrypt_change, %struct.hci_ev_encrypt_change* %87, i32 0, i32 1
  %89 = load i32, i32* %88, align 8
  %90 = load %struct.hci_ev_encrypt_change*, %struct.hci_ev_encrypt_change** %5, align 8
  %91 = getelementptr inbounds %struct.hci_ev_encrypt_change, %struct.hci_ev_encrypt_change* %90, i32 0, i32 0
  %92 = load i64, i64* %91, align 8
  %93 = call i32 @hci_encrypt_cfm(%struct.hci_conn* %86, i32 %89, i64 %92)
  br label %94

94:                                               ; preds = %85, %77
  br label %95

95:                                               ; preds = %94, %2
  %96 = load %struct.hci_dev*, %struct.hci_dev** %3, align 8
  %97 = call i32 @hci_dev_unlock(%struct.hci_dev* %96)
  ret void
}

declare dso_local i32 @BT_DBG(i8*, i32, i32) #1

declare dso_local i32 @hci_dev_lock(%struct.hci_dev*) #1

declare dso_local %struct.hci_conn* @hci_conn_hash_lookup_handle(%struct.hci_dev*, i32) #1

declare dso_local i32 @__le16_to_cpu(i32) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @hci_proto_connect_cfm(%struct.hci_conn*, i32) #1

declare dso_local i32 @hci_conn_put(%struct.hci_conn*) #1

declare dso_local i32 @hci_encrypt_cfm(%struct.hci_conn*, i32, i64) #1

declare dso_local i32 @hci_dev_unlock(%struct.hci_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
